@@ -19,11 +19,11 @@ public class SugarAndSaltSolutionsColorScheme {
     private static final Color background = new Color( 0, 51, 153 );
 
     //Flag to indicate whether the user has selected to show a white background, e.g., for printing handouts
-    public final Property<Boolean> projectorMode = new Property<Boolean>( false );
+    public final Property<Boolean> whiteBackground = new Property<Boolean>( false );
 
     //Colors for the background
-    public final ColorSet backgroundColorSet = new ColorSet( background, projectorMode, Color.white );
+    public final ColorSet backgroundColorSet = new ColorSet( background, whiteBackground, Color.white );
 
     //Colors for the salt
-    public final ColorSet saltColor = new ColorSet( white, projectorMode, Color.darkGray );
+    public final ColorSet saltColor = new ColorSet( white, whiteBackground, Color.darkGray );
 }
