@@ -149,7 +149,7 @@ public abstract class SugarAndSaltSolutionsCanvas extends PhetPCanvas implements
         }
 
         //Add beaker node that shows border of the beaker and tick marks
-        addChild( new BeakerNodeWithTicks( transform, model.beaker, showBeakerTickLabels, globalState.colorScheme.projectorMode ) );
+        addChild( new BeakerNodeWithTicks( transform, model.beaker, showBeakerTickLabels, globalState.colorScheme.whiteBackground ) );
 
         //Debug for showing stage
         if ( debug ) {
