@@ -1,3 +1,4 @@
+Renamed projectorMode field to whiteBackground to match up with the menu item name, see #3090
 # 0.00.125 (57089) Sep 30, 2011
 Fixed the title in the window title bar for wet lab sims
 # 0.00.124 (57087) Sep 30, 2011
